--- a/Assignment-01.ipynb
+++ b/Assignment-01.ipynb
@@ -484,8 +484,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "50d44243a836fa706a3a1388c68b61443099f7d41830a14fcc70e02aec32f431"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
